Forms for Login and Register

--- a/worlds-service/src/main/resources/messages.properties
+++ b/worlds-service/src/main/resources/messages.properties
@@ -7,3 +7,13 @@ openid.authorize.start.header=Login / Register
 openid.authorize.email.label=Email Address
 openid.authorize.email.placeholder=user@example.com
 openid.authorize.start.action=Login / Register
+openid.authorize.login.header=Login
+openid.authorize.login.action=Login
+openid.authorize.register.header=Register
+openid.authorize.register.action=Register
+openid.authorize.password.label=Password
+openid.authorize.password2.label=Repeat Password
+openid.authorize.username.label=User name
+openid.authorize.username.placeholder=Enter your desired username here
+openid.authorize.displayName.label=Display name
+openid.authorize.displayName.placeholder=Enter your display name here
