--- a/worlds-service/src/main/resources/messages.properties
+++ b/worlds-service/src/main/resources/messages.properties
@@ -12,8 +12,12 @@ openid.authorize.login.action=Login
 openid.authorize.register.header=Register
 openid.authorize.register.action=Register
 openid.authorize.password.label=Password
+openid.authorize.password.error.blank_password=No password was entered
 openid.authorize.password2.label=Repeat Password
+openid.authorize.password2.error.password_mismatch=The passwords did not match
 openid.authorize.username.label=User name
 openid.authorize.username.placeholder=Enter your desired username here
+openid.authorize.username.error.blank_username=No username was entered
+openid.authorize.username.error.duplicate_username=That username is already registered. Please choose another.
 openid.authorize.displayName.label=Display name
 openid.authorize.displayName.placeholder=Enter your display name here
