Check if the scopes provided are all valid, and return an error if not

--- a/worlds-service/src/main/resources/messages.properties
+++ b/worlds-service/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ openid.authorize.malformed.header=Error with Authorize Request
 openid.authorize.malformed.text=There was an error processing the request to start authorizing the user. 
 openid.authorize.malformed.unsupportedResponseType=The response_type parameter was not a supported value: {0}
 openid.authorize.malformed.missingParameter=A required parameter was missing: {0}
+openid.authorize.malformed.unsupportedScope=A requested scope was unknown: {0}
 openid.authorize.start.header=Login / Register
 openid.authorize.email.label=Email Address
 openid.authorize.email.placeholder=user@example.com
