When attempting to register a duplicate email address, show the login screen with a message

--- a/worlds-service/src/main/resources/messages.properties
+++ b/worlds-service/src/main/resources/messages.properties
@@ -22,3 +22,4 @@ openid.authorize.username.error.blank_username=No username was entered
 openid.authorize.username.error.duplicate_username=That username is already registered. Please choose another.
 openid.authorize.displayName.label=Display name
 openid.authorize.displayName.placeholder=Enter your display name here
+openid.authorize.login.error.duplicate_email=This email address is already registered. Please log in now.
