Support for displaying errors when logging in

--- a/worlds-service/src/main/resources/messages.properties
+++ b/worlds-service/src/main/resources/messages.properties
@@ -12,6 +12,7 @@ openid.authorize.login.header=Login
 openid.authorize.login.action=Login
 openid.authorize.register.header=Register
 openid.authorize.register.action=Register
+openid.authorize.register.error.unknown_email=This email address is not registered.
 openid.authorize.password.label=Password
 openid.authorize.password.error.blank_password=No password was entered
 openid.authorize.password2.label=Repeat Password
@@ -23,3 +24,4 @@ openid.authorize.username.error.duplicate_username=That username is already regi
 openid.authorize.displayName.label=Display name
 openid.authorize.displayName.placeholder=Enter your display name here
 openid.authorize.login.error.duplicate_email=This email address is already registered. Please log in now.
+openid.authorize.password.error.invalid_password=Incorrect password
