Display the logged in user menu as a dropdown with the Logout link

--- a/worlds-webapp/src/i18n/messages.json
+++ b/worlds-webapp/src/i18n/messages.json
@@ -1,6 +1,9 @@
 {
   "page": {
     "title": "Worlds",
-    "login": "Login / Register"
+    "login": "Login / Register",
+    "userMenu": {
+      "logout": "Logout"
+    }
   }
 }
