Added link to the logged in users menu to route to the user profile

--- a/worlds-webapp/src/i18n/messages.json
+++ b/worlds-webapp/src/i18n/messages.json
@@ -3,7 +3,8 @@
     "title": "Worlds",
     "login": "Login / Register",
     "userMenu": {
-      "logout": "Logout"
+      "logout": "Logout",
+      "profile": "User Profile"
     }
   }
 }
