Component to restrict access to screens if an access token is not present

--- a/worlds-webapp/src/i18n/messages.json
+++ b/worlds-webapp/src/i18n/messages.json
@@ -6,5 +6,9 @@
       "logout": "Logout",
       "profile": "User Profile"
     }
+  },
+  "unauthenticated": {
+    "header": "Not Logged In",
+    "message": "You must be logged in to access this page!"
   }
 }
