Started the actual structure of the User Profile, including the breadcrumbs

--- a/worlds-webapp/src/i18n/messages.json
+++ b/worlds-webapp/src/i18n/messages.json
@@ -10,5 +10,11 @@
   "unauthenticated": {
     "header": "Not Logged In",
     "message": "You must be logged in to access this page!"
+  },
+  "userProfile": {
+    "breadcrumbs": {
+      "home": "Home",
+      "current": "User Profile: "
+    }
   }
 }
