Component to act as a loading screen

--- a/worlds-webapp/src/i18n/messages.json
+++ b/worlds-webapp/src/i18n/messages.json
@@ -11,6 +11,9 @@
     "header": "Not Logged In",
     "message": "You must be logged in to access this page!"
   },
+  "loading": {
+    "message": "Loading, Please wait..."
+  },
   "userProfile": {
     "breadcrumbs": {
       "home": "Home",
