i18n for the user profile form

--- a/worlds-webapp/src/i18n/messages.json
+++ b/worlds-webapp/src/i18n/messages.json
@@ -18,6 +18,12 @@
     "breadcrumbs": {
       "home": "Home",
       "current": "User Profile: "
+    },
+    "form": {
+      "email": "Email Address",
+      "username": "Username",
+      "displayName": "Display Name",
+      "save": "Save"
     }
   }
 }
