--- a/worlds-webapp/src/i18n/messages.json
+++ b/worlds-webapp/src/i18n/messages.json
@@ -28,6 +28,7 @@
         "success": "User details updated successfully.",
         "error": {
           "duplicateUsername": "That username is already in use.",
+          "duplicateEmail": "That email address is already in use.",
           "unexpected": "An unexpected error occurred saving the changes."
         }
       }
