Added side menu to switch between profile and password forms

--- a/worlds-webapp/src/i18n/messages.json
+++ b/worlds-webapp/src/i18n/messages.json
@@ -19,6 +19,10 @@
       "home": "Home",
       "current": "User Profile: "
     },
+    "menu": {
+      "profile": "Profile",
+      "password": "Change Password"
+    },
     "form": {
       "email": "Email Address",
       "username": "Username",
