Display widget for the change password form

--- a/worlds-webapp/src/i18n/messages.json
+++ b/worlds-webapp/src/i18n/messages.json
@@ -36,6 +36,12 @@
           "unexpected": "An unexpected error occurred saving the changes."
         }
       }
+    },
+    "password": {
+      "original": "Current Password",
+      "new1": "New Password",
+      "new2": "Repeat New Password",
+      "save": "Change Password"
     }
   }
 }
