Display Saving, Success and Error states when changing passwords

--- a/worlds-webapp/src/i18n/messages.json
+++ b/worlds-webapp/src/i18n/messages.json
@@ -43,7 +43,7 @@
       "new2": "Repeat New Password",
       "save": "Change Password",
       "messages": {
-        "success": "User details updated successfully.",
+        "success": "Password updated successfully.",
         "error": {
           "passwordMismatch": "The new passwords do not match",
           "unexpected": "An unexpected error occurred changing your password."
